[package]
name = "extract_dat"
version = "0.1.0"
edition = "2021"

[dependencies]
quick-xml = "0.23.1"
phf = { version = "0.10", features = ["macros"] }
encoding_rs = "0.8.28"
flate2 = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.4"

[lib]
name = "extract_dat_files"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]