[package]
name = "extract_dat"
version = "0.0.3"
edition = "2024"

[dependencies]
quick-xml = "0.23.1"
phf = { version = "0.10", features = ["macros"] }
encoding_rs = "0.8.28"
flate2 = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.4"
futures = "0.3.31"
num_cpus = "1.13"
rayon = "1.10.0"

[lib]
name = "extract_dat_files"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[profile.release]
opt-level = 3         
lto = "fat"           
codegen-units = 1     
debug = false         
panic = "abort"      
strip = true          
